[gd_scene load_steps=5 format=3 uid="uid://ct2jcr4xgxwyi"]

[ext_resource type="Script" path="res://scenes/capturable/capturable_location.gd" id="1_nvmlj"]
[ext_resource type="Texture2D" uid="uid://cfbwx2txvb6p2" path="res://sprites/Circle.png" id="2_8x0yl"]
[ext_resource type="PackedScene" uid="uid://buqadppkk8v8r" path="res://scenes/team/team.tscn" id="3_w36lt"]

[sub_resource type="CircleShape2D" id="CircleShape2D_r3beu"]
radius = 500.0

[node name="CapturableLocation" type="Area2D"]
collision_layer = 0
collision_mask = 33
script = ExtResource("1_nvmlj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_r3beu")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.254902)
scale = Vector2(10, 10)
texture = ExtResource("2_8x0yl")

[node name="Team" parent="." instance=ExtResource("3_w36lt")]

[node name="CaptureTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="CaptureTimer" to="." method="_on_capture_timer_timeout"]
